bug has been fixed